crates/fig-lexer/tests/snapshots/integration_tests__enums__mixed_values.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Enum
- Ident: Priority
- Newline
- Indent
- Ident: LOW
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Ident: MEDIUM
- Newline
- Ident: HIGH
- Newline
- Ident: CRITICAL
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "100"
    suffix: ~
- Newline
- Dedent
