crates/fig-lexer/tests/snapshots/integration_tests__enums__namespaced.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Enum
- LBracket
- U8
- RBracket
- Ident: Dog
- ColonColon
- Ident: Breed
- Newline
- Indent
- Ident: BULLDOG
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Ident: POODLE
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Ident: BEAGLE
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Ident: HUSKY
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "3"
    suffix: ~
- Newline
- Dedent
- Enum
- Core
- ColonColon
- Ident: os
- ColonColon
- Ident: Signal
- Newline
- Indent
- Ident: SIGINT
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Ident: SIGTERM
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "15"
    suffix: ~
- Newline
- Ident: SIGKILL
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "9"
    suffix: ~
- Newline
- Dedent
