crates/fig-lexer/tests/snapshots/integration_tests__enums__simple.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Enum
- Ident: Direction
- Newline
- Indent
- Ident: UP
- Newline
- Ident: DOWN
- Newline
- Ident: LEFT
- Newline
- Ident: RIGHT
- Newline
- Dedent
