crates/fig-lexer/tests/snapshots/integration_tests__enums__single_variant.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Enum
- Ident: One
- Newline
- Indent
- Ident: ONLY
- Newline
- Dedent
- Enum
- LBracket
- U8
- RBracket
- Ident: SingleByte
- Newline
- Indent
- Ident: ONLY
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "42"
    suffix: ~
- Newline
- Dedent
